# ChangeLog for net-im/kpopup
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/kpopup/ChangeLog,v 1.4 2004/06/29 16:50:37 dholm Exp $

*kpopup-0.9.7 (29 Jun 2004)

  29 Jun 2004; David Holm <dholm@gentoo.org> kpopup-0.9.7.ebuild:
  Added to ~ppc.

  29 Jun 2004; Carsten Lohrke <carlo@gentoo.org> kpopup-0.9.6_pre1.ebuild:
  version bump, QA: ...

*kpopup-0.9.6_pre1 (15 Mar 2004)

  15 Mar 2004; Dominik Stadler <centic@gentoo.org> kpopup-0.9.6_pre1.ebuild:
  Added new ebuild, thanks to Juergen Nagel <juergen@nagel.homeip.net>, Bug 19739
