@@ -1,6 +1,6 @@
-MD5 6950855d4009b56d545c22ac2d1f107b ChangeLog 605
-MD5 f2e0aea979ba778380fd81501cde1780 kpopup-0.9.6_pre1.ebuild 501
+MD5 6c74aecfcb2c74f1059c65224850cf68 ChangeLog 746
+MD5 c380233114d3f82728c92d547d3f4c74 kpopup-0.9.7.ebuild 916
 MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
-MD5 8285555c5c0b421db0d5bc5a6748077d kpopup-0.9.7.ebuild 501
+MD5 f2e0aea979ba778380fd81501cde1780 kpopup-0.9.6_pre1.ebuild 501
 MD5 98669fef3c4d089a9a387e84dd5c8884 files/digest-kpopup-0.9.6_pre1 68
 MD5 f286f8494aae2ec4b2ad6ea845aeb18e files/digest-kpopup-0.9.7 64
